--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 * {
   margin: 0; padding: 0; box-sizing: border-box;
+  /*border: 1px red solid;*/
 }
 
 body {
@@ -9,6 +10,10 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #00002f;
 }
 
 code {
